cmake_minimum_required(VERSION 4.1)
project(clase_del_26_1_26)

set(CMAKE_CXX_STANDARD 20)

add_executable(clase_del_26_1_26 main.cpp
        Percederos.cpp
        Percederos.h
        NoPercederos.cpp
        NoPercederos.h
        Producto.cpp
        Producto.h
        Electronicos.cpp
        Electronicos.h
        Abarrotes.cpp
        Abarrotes.h
        cliente.cpp
        cliente.h
        clienteFrecuente.cpp
        clienteFrecuente.h
        tarjetaDescuento.cpp
        tarjetaDescuento.h
        Fecha.cpp
        Fecha.h
        Caja.cpp
        Caja.h
        Factura.cpp
        Factura.h)
